@@ -17,7 +17,8 @@ public enum SortField {
     }
 
     public Comparator<Product> getComparator(List<String> queryWords) {
-        if (this == DESCRIPTION && queryWords != null && !queryWords.getFirst().isEmpty()) {
+        //if (this == DESCRIPTION && queryWords != null && !queryWords.getFirst().isEmpty()) {
+        if (this == DESCRIPTION && queryWords != null && !queryWords.get(0).isEmpty()) {
             return Comparator.comparingInt((Product p) -> countQueryOccurrences(p, queryWords)).reversed();
         }
         return comparator;
